--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--block__element--modifier-->
 <header class="header">
-    <span><h1 class="header__title--blue">Pizzaria</h1><h1 class="header__title--pink">Pizza</h1></span>
+    <span><h1 class="header__title--blue">Pizzaria</h1><h1 class="header__title--red">Pizza</h1></span>
 </header>
     <main>
         <div class="pai">
