--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
      <!--block__element--modifier-->
      <header class="header">
-<div class="title"><h1 class="header__title--blue">Pizzaria</h1><h1 class="header__title--red">Pizza</h1></div>
+
+<img class="header__logo" src="logo3.jpeg">
+<div class="header__title">
+<h1 class="header__title--blue">Pizzaria;</h1><h1 class="header__title--red">Pizza</h1></div>
     </header>
     <main>
 
